# pi-ip-cam

./: .gitignore  CMakeLists.txt  README  README.md  main.cpp  motion_detector.cpp  motion_detector.hpp
